--- a/css/style.css
+++ b/css/style.css
@@ -15,41 +15,40 @@
 /* ---------------------------------------------- /*
 *   base css
 /* ---------------------------------------------- */
-html{
-  font-size: .9rem;
+html {
+  font-size: 0.9rem;
 }
-body{
+body {
   line-height: 2;
-  letter-spacing: .1rem;
+  letter-spacing: 0.1rem;
 }
-main{
+main {
   overflow: hidden;
 }
-p{
+p {
   color: #4a4a4a;
   margin: 0 0 10px;
 }
-a{
+a {
   color: #35ffff;
-  transition: .4s all;
+  transition: 0.4s all;
 }
-a:hover{
-  color : rgba(253, 115, 90, 1);
-  transition: .4s all;
+a:hover {
+  color: rgba(253, 115, 90, 1);
+  transition: 0.4s all;
 }
-h1 a{
-  font-family: 'Josefin Sans',
-  sans-serif;
+h1 a {
+  font-family: "Josefin Sans", sans-serif;
   font-weight: 700;
 }
-h3{
+h3 {
   font-size: 1.4rem;
   font-weight: 700;
-  font-family: 'Josefin Sans',sans-serif;
+  font-family: "Josefin Sans", sans-serif;
 }
 
-*{
-  font-family: 'Noto Sans KR', sans-serif;
+* {
+  font-family: "Noto Sans KR", sans-serif;
 }
 
 /* 各セクションの上下余白 */
@@ -60,161 +59,173 @@ h3{
 *   ここより上は変更しないでください
 /* ---------------------------------------------- */
 
-
 /* ---------------------------------------------- /*
 *   見出しの設定
 /* ---------------------------------------------- */
 /* 各セクションタイトルの装飾 */
 .module__header {
-  margin    : 0 0 50px;
-  ここに書く
+  margin: 0 0 50px;
+  text-align: center;
 }
 .module__title {
-  position     : relative;
-  font-family: 'Varela Round',sans-serif;
+  position: relative;
+  font-family: "Varela Round", sans-serif;
   margin-bottom: 50px;
 }
 .module__title span {
-  position   : absolute;
-  font-size  : 100px;
-  font-family: 'Josefin Sans',sans-serif;
+  position: absolute;
+  font-size: 100px;
+  font-family: "Josefin Sans", sans-serif;
   font-weight: 700;
-  top        : -40px;
-  left       : ここに書く
-  right      : ここに書く
-  ここに書く    : 0.05;
+  top: -40px;
+  left: 0;
+  right: 0;
+  opacity: 0.05;
 }
 .module__line {
   background: #666;
-  width     : 55px;
-  height    : 1px;
-  margin    : 30px auto;
+  width: 55px;
+  height: 1px;
+  margin: 30px auto;
 }
 
 /* ---------------------------------------------- /*
 *   1. トップビジュアル
 /* ---------------------------------------------- */
 #top {
-  position        : relative;
+  position: relative;
   /* トップ問題③ CSSを書く */
-  height          : 100vh;
-  background-image : url('/images/top_bg.jpg');
+  height: 100vh;
+  background-image: url("/images/top_bg.jpg");
   background-size: cover;
   background-position: center;
-   /* トップ問題④ CSSを書く */
-  display        : flex;
+  /* トップ問題④ CSSを書く */
+  display: flex;
   justify-content: center;
-  align-items    : center;
+  align-items: center;
 }
 
 /* 背景に黒いフィルターをかける */
 #top::after {
-  content            : "";
-  position           : absolute;
-  left               : 0;
-  right              : 0;
-  top                : 0;
-  bottom             : 0;
-  background-color   : #000000;
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background-color: #000000;
   /* 背景にドット柄の黒いフィルターをかける */
-  background-image: linear-gradient(45deg, #444 25%, transparent 25%, transparent 75%, #444 75%, #444),
-  linear-gradient(45deg, #444 25%, transparent 25%, transparent 75%, #444 75%, #444);
-  background-position: 0 0,
-  1.5px 1.5px;
+  background-image: linear-gradient(
+      45deg,
+      #444 25%,
+      transparent 25%,
+      transparent 75%,
+      #444 75%,
+      #444
+    ),
+    linear-gradient(
+      45deg,
+      #444 25%,
+      transparent 25%,
+      transparent 75%,
+      #444 75%,
+      #444
+    );
+  background-position: 0 0, 1.5px 1.5px;
   background-size: 3px 3px;
-  opacity            : 0.5;
+  opacity: 0.5;
 }
 
 .top-item {
-  text-align : center;
-  padding    : 60px 30px;
-  max-width  : 780px;
-  width      : 100%;
-  z-index    : 1;
+  text-align: center;
+  padding: 60px 30px;
+  max-width: 780px;
+  width: 100%;
+  z-index: 1;
 }
-.top-item img{
+.top-item img {
   max-width: 180px;
   width: 100%;
 }
 /* helloの文字を装飾 */
 .top-item__main {
-  color : #fff;
-  font-family: 'Josefin Sans',sans-serif;
-  font-size     : 30px;
+  color: #fff;
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 30px;
   letter-spacing: 5px;
 }
 /* メッセージの文字を装飾 */
 .top-item__sub {
-  color : #fff;
-  font-size     : 15px;
+  color: #fff;
+  font-size: 15px;
   text-transform: none;
-  margin        : 15px 0;
-  font-weight   : 200;
+  margin: 15px 0;
+  font-weight: 200;
 }
 
 /* マウスの動くアイコン*/
 .mouse-icon {
-  position     : absolute;
-  left         : 50%;
-  bottom       : 60px;
-  border       : 2px solid #fff;
+  position: absolute;
+  left: 50%;
+  bottom: 60px;
+  border: 2px solid #fff;
   border-radius: 16px;
-  height       : 50px;
-  width        : 30px;
-  margin-left  : -15px;
-  display      : block;
-  z-index      : 10;
-  opacity      : 0.6;
+  height: 50px;
+  width: 30px;
+  margin-left: -15px;
+  display: block;
+  z-index: 10;
+  opacity: 0.6;
 }
 .mouse-icon .wheel {
-  -webkit-animation-name           : drop;
-  -webkit-animation-duration       : 1s;
+  -webkit-animation-name: drop;
+  -webkit-animation-duration: 1s;
   -webkit-animation-timing-function: linear;
-  -webkit-animation-delay          : 0s;
+  -webkit-animation-delay: 0s;
   -webkit-animation-iteration-count: infinite;
-  -webkit-animation-play-state     : running;
-  animation-name                   : drop;
-  animation-duration               : 1s;
-  animation-timing-function        : linear;
-  animation-delay                  : 0s;
-  animation-iteration-count        : infinite;
-  animation-play-state             : running;
+  -webkit-animation-play-state: running;
+  animation-name: drop;
+  animation-duration: 1s;
+  animation-timing-function: linear;
+  animation-delay: 0s;
+  animation-iteration-count: infinite;
+  animation-play-state: running;
 }
 .mouse-icon .wheel {
-  position     : relative;
+  position: relative;
   border-radius: 10px;
-  background   : #fff;
-  width        : 4px;
-  height       : 10px;
-  top          : 6px;
-  margin-left  : auto;
-  margin-right : auto;
+  background: #fff;
+  width: 4px;
+  height: 10px;
+  top: 6px;
+  margin-left: auto;
+  margin-right: auto;
 }
 @-webkit-keyframes drop {
   0% {
-    top    : 5px;
+    top: 5px;
     opacity: 0;
   }
   30% {
-    top    : 10px;
+    top: 10px;
     opacity: 1;
   }
   100% {
-    top    : 25px;
+    top: 25px;
     opacity: 0;
   }
 }
 @keyframes drop {
   0% {
-    top    : 5px;
+    top: 5px;
     opacity: 0;
   }
   30% {
-    top    : 10px;
+    top: 10px;
     opacity: 1;
   }
   100% {
-    top    : 25px;
+    top: 25px;
     opacity: 0;
   }
 }
@@ -224,93 +235,76 @@ h3{
 	* 2. ナビバー
 /* ---------------------------------------------- */
 /* メモ：bootstrapだけで実装 */
-.nav-item a{
+.nav-item a {
   /* ナビバー問題① リンクの色を#636363にする */
   color: #636363;
-  font-family: 'Varela Round',sans-serif;
+  font-family: "Varela Round", sans-serif;
 }
-
 
 /* ---------------------------------------------- /*
   * 3. Message
 /* ---------------------------------------------- */
-  /* CSSの記述なし */
-  /* module__headerの記述は50行目付近 */
+/* CSSの記述なし */
+/* module__headerの記述は50行目付近 */
 
 /* ---------------------------------------------- /*
 *  4. About
 /* ---------------------------------------------- */
 
 /* 左側のプロフィール画像を設定 */
-.about-box__img{
-
+.about-box__img {
 }
 
 /* 右側のプロフィール */
-.about-box__text{
-
+.about-box__text {
 }
 
 /* プロフィールのボックス */
 .about-item {
-
 }
 
 /* プロフィールのアイコンを出す */
 .about-item__icon {
-
 }
 
 /* アイコンの幅分、左側に55pxのpadding */
 .about-item__box {
-
 }
 
 /* タイトル下の余白15px */
 .about-item__title {
-
 }
 
 /* プロフィール文章 */
 p.about-item__desc {
-
 }
-
 
 /* ---------------------------------------------- /*
 *  5. Works（portfolio）
 /* ---------------------------------------------- */
 
-
-
 /* ---------------------------------------------- /*
 *  6. Service
 /* ---------------------------------------------- */
-
-
 
 /* ---------------------------------------------- /*
 *  7. Price
 /* ---------------------------------------------- */
 
-
-
-
 /* ---------------------------------------------- /*
 *  8. Contact
 /* ---------------------------------------------- */
 
-#contact{
+#contact {
   max-width: 650px;
   margin: 0 auto;
 }
 .btn-custom-2 {
-  background   : rgba(253, 180, 90, 1);
+  background: rgba(253, 180, 90, 1);
   border-radius: 3px;
-  color        : #fff;
+  color: #fff;
 }
 
 /* ---------------------------------------------- /*
 *  9. Footer
 /* ---------------------------------------------- */
-
