--- a/css/style.css
+++ b/css/style.css
@@ -299,10 +299,116 @@ p.about-item__desc {
 /* ---------------------------------------------- /*
 *  5. Works（portfolio）
 /* ---------------------------------------------- */
+#portfolio {
+  padding-bottom: 120px;
+}
+
+.works-item {
+  position: relative;
+  height: 100%;
+}
+
+.works-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.works-item__overlay {
+  opacity: 0;
+  padding: 0 30px;
+  transition: 0.8s all;
+}
+
+.works-item:hover .works-item__overlay {
+  opacity: 1;
+  transition: 0.8s all;
+}
+
+.works-item__overlay::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background-color: #000;
+  opacity: 0.7;
+}
+
+.works-item__inner {
+  color: #fff;
+  position: absolute;
+  text-align: center;
+  width: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translateY(-50%) translateX(-50%);
+  z-index: 1;
+}
+
+.works-item__desc {
+  margin-top: 20px;
+  color: #fff;
+}
 
 /* ---------------------------------------------- /*
 *  6. Service
 /* ---------------------------------------------- */
+#service {
+  background-image: url(/images/service_bg.jpg);
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+#service h2 {
+  color: #fff;
+}
+
+#service h2 span {
+  opacity: 0.12;
+}
+
+.service-card {
+  background: #fff;
+  padding: 34px 28px 40px;
+  text-align: center;
+  margin: 30px auto;
+  box-shadow: -6px 10px 30px rgba(0, 0, 0, 0.06);
+}
+
+.service-card__icon {
+  color: #00cfd6;
+  font-size: 30px;
+}
+
+.service-card__title {
+  font-size: 1.1rem;
+  letter-spacing: 3px;
+  margin: 10px 0 20px;
+  color: rgba(255, 255, 255, 0.1);
+  background: linear-gradient(
+    to right,
+    rgb(76, 217, 105),
+    rgb(52, 170, 220),
+    rgb(88, 86, 217),
+    rgb(255, 45, 83),
+    rgb(255, 45, 83),
+    rgb(88, 86, 217),
+    rgb(52, 170, 220),
+    rgb(76, 217, 105)
+  );
+  background-size: 150%;
+  -webkit-background-clip: text;
+  animation: Transition 10s linear infinite;
+}
+
+.service-card__copy {
+  color: #5b5963;
+  font-size: 0.9rem;
+  text-align: left;
+  font-family: fot-tsukuardgothic-std, sans-serif;
+}
 
 /* ---------------------------------------------- /*
 *  7. Price
