--- a/css/style.css
+++ b/css/style.css
@@ -521,3 +521,31 @@ table tbody th {
 /* ---------------------------------------------- /*
 *  9. Footer
 /* ---------------------------------------------- */
+footer {
+  background-color: #333;
+  padding: 40px 0;
+}
+
+footer p {
+  color: #fff;
+}
+
+.social-links a {
+  margin: 5px;
+  width: 36px;
+  height: 36px;
+  display: block;
+  line-height: 33px;
+  border: 1px solid #d6d6d6;
+  border-radius: 50%;
+  color: #d6d6d6;
+}
+
+.social-links a:hover {
+  border: 3px solid #8e8e8e;
+  color: #8e8e8e;
+}
+
+.social-links .fab {
+  margin-left: 2px;
+}
