--- a/css/style.css
+++ b/css/style.css
@@ -549,3 +549,7 @@ footer p {
 .social-links .fab {
   margin-left: 2px;
 }
+
+.nav-pills .nav-link.active {
+  background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
+}
