--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,6 @@ h3 {
   position: relative;
   /* トップ問題③ CSSを書く */
   height: 100vh;
-  background-image: url("/images/top_bg.jpg");
   background-size: cover;
   background-position: center;
   /* トップ問題④ CSSを書く */
@@ -560,4 +559,13 @@ footer p {
 
 .nav-pills .nav-link.active {
   background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
+}
+
+#youtube-wrap {
+  background-image: url("../images/top_bg.jpg");
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  height: 100vh;
+  width: 100%;
 }
